[package]
name = "librs"
build = "build.rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59"
cc = "1.0"
protoc-rust = "2"

# [features]
# default-openssl = [
#     # "all-configs",
#     # "all-endpoints",
#     "openssl-aead",
#     "openssl-tls",
#     # "api",
# ]

# openssl-aead = ["openssl"]
# openssl-tls = ["openssl", "tokio-openssl", "openssl-probe"]

[dependencies]
anyhow = "1.0"
async-ffi = "0.2"
async-trait = "0.1"
byteorder = "1"
bytes = "1"
directories = "4.0"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4.0"
libloading = "0.7"
protobuf = "2"
rand = "0.8"
reqwest = {version = "0.11", features = ["blocking", "json"]}
socket2 = "0.4"
thiserror = "1.0"
tokio = {version = "1.17", features = ["full"]}

# log
chrono = "0.4"
colored = "2.0"
fern = {version = "0.6", features = ["colored"]}
log = {version = "0.4", features = ["std"]}

# json
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}
serde_json = {version = "1.0", features = ["raw_value"], optional = true}

# regex
regex = {version = "1", default-features = false, features = ["std", "perf"], optional = true}

# ring
ring = {version = "0.16", optional = true}

# openssl
openssl = {version = "0.10", features = ["vendored"], optional = true}
# TLS/openssl
openssl-probe = {version = "0.1", optional = true}
tokio-openssl = {version = "0.6", optional = true}

# url/http
http = {version = "0.2", optional = true}
url = {version = "2.2", optional = true}

async-socks5 = {version = "0.5", optional = true}

hex = {version = "0.4", optional = true}
hkdf = {version = "0.11", optional = true}
md-5 = {version = "0.9", optional = true}
sha-1 = {version = "0.9", optional = true}
sha2 = {version = "0.9", optional = true}

tokio-util = {version = "0.6", default-features = false, features = ["io"], optional = true}

# TUN
[target.'cfg(any(target_os = "ios", target_os = "android", target_os = "macos", target_os = "linux"))'.dependencies]
tun = {version = "0.5", features = ["async"]}
# tun = {git = "https://github.com/eycorsican/rust-tun.git", branch = "upgrade", features = ["async"], optional = true}

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libc = "0.2"
pnet_datalink = {version = "0.29", package = "pnet_datalink"}

# Used in mobile logger
[target.'cfg(any(target_os = "ios", target_os = "macos", target_os = "android"))'.dependencies]
memchr = { version = "2" }
