[package]
name = "acc-turn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acc-turn"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librs = {path = "../../librs"}
anyhow = "1.0"
lazy_static = "1.4.0"
tokio = {version = "1.17", features = ["full"]}
tokio-util = {version = "0.6"}
reqwest = {version = "0.11", features = ["blocking", "json"]}
futures = "0.3"
futures-util = "0.3"
num_cpus = "1"


log = { version = "0.4", features = ["std"] }
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
colored = "2.0"


# TUN
[target.'cfg(any(target_os = "ios", target_os = "android", target_os = "macos", target_os = "linux"))'.dependencies]
tun = {version = "0.5", features = ["async"]}
